--- a/demos/slider.html
+++ b/demos/slider.html
@@ -41,7 +41,7 @@
         #right:hover,
         #left:hover {
             cursor: pointer;
-            background-color: lightyellow;
+            background-color: hsl(103, 90%, 92%);
         }
     </style>
     <script type="module" src="/src/scripts/slider.ts"></script>
